--- a/style.css
+++ b/style.css
@@ -3,11 +3,16 @@
 /*Primary*/
 :root {
   --button-active: hsl(220, 98%, 61%);
-  --check-background: linear-gradient hsl(192, 100%, 67%) to hsl(280, 87%, 65%);
+  --check-background: linear-gradient(
+    120deg,
+    hsl(192, 100%, 67%),
+    hsl(280, 87%, 65%)
+  );
 
   /*Dark Theme*/
 
-  --background-image: url("./images/bg-mobile-dark.jpg");
+  --background-image-mb: url("./images/bg-mobile-dark.jpg");
+  --background-image-dt: url("./images/bg-desktop-dark.jpg");
   --background-color: hsl(235, 21%, 11%);
   --Very-Dark-Desaturated-Blue: hsl(235, 24%, 19%);
   --color-header: hsl(234, 39%, 85%);
@@ -16,18 +21,19 @@
   --color-list: hsl(234, 11%, 52%);
   --list-item-completed: hsl(233, 14%, 35%);
   --bg-color-list: hsl(237, 14%, 26%);
-  --switch-bg-image: url("./images//icon-sun.svg")
+  --switch-bg-image: url("./images//icon-sun.svg");
 }
-  /*Light Theme*/
-  .lightMode {
-  --background-image: url("./images/bg-mobile-light.jpg");
+/*Light Theme*/
+.lightMode {
+  --background-image-mb: url("./images/bg-mobile-light.jpg");
+  --background-image-dt: url("./images/bg-desktop-light.jpg");
   --background-color: hsl(0, 0%, 98%);
   --color-list: hsl(236, 33%, 92%);
   --color-header: hsl(233, 11%, 84%);
   --bg-color-list: hsl(236, 9%, 61%);
   --color-list-item: hsl(235, 19%, 35%);
-  --switch-bg-image: url("./images//icon-moon.svg")
-  }
+  --switch-bg-image: url("./images//icon-moon.svg");
+}
 
 * {
   margin: 0;
@@ -37,7 +43,7 @@
 
 body {
   background-color: var(--background-color);
-  background-image: var(--background-image);
+  background-image: var(--background-image-mb);
   background-repeat: no-repeat;
   background-size: contain;
   font-family: "Josefin Sans", sans-serif;
@@ -48,6 +54,13 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+@media (min-width: 720px) {
+  body {
+    background-image: var(--background-image-dt);
+    background-size: contain;
+  }
 }
 
 h1 {
@@ -62,12 +75,39 @@ h1 {
   width: 90%;
   height: 90%;
 }
+@media (min-width: 720px) {
+  .container__main {
+    width: 50%;
+  }
+}
+
+@media (min-width: 920px) {
+  .container__main {
+    width: 40%;
+  }
+}
 
 .header__main {
   display: flex;
   align-items: center;
   justify-content: space-between;
   margin-bottom: 2em;
+}
+
+@media (min-width: 920px) {
+  .header__main {
+    margin-top: 2.5em;
+  }
+}
+
+.button,
+.wrapper__input > p {
+  cursor: pointer;
+}
+
+.button:hover,
+.wrapper__input > p:hover {
+  color: var(--color-list-item-hover);
 }
 
 .button__switch {
@@ -84,7 +124,6 @@ h1 {
   margin: 1em auto 0;
   list-style: none;
   line-height: 3em;
-  padding: 0em 1em;
 }
 
 .todo-list,
@@ -98,6 +137,8 @@ h1 {
 
 #user-input {
   padding: 1em 1em 1em 4em;
+  color: var(--color-header);
+  font-family: "Josefin Sans", sans-serif;
 }
 
 #user-input::placeholder {
@@ -108,6 +149,7 @@ h1 {
 .wrapper__input {
   display: flex;
   align-items: center;
+  position: relative;
 }
 
 .wrapper__input > p {
@@ -130,13 +172,21 @@ h1 {
   border-radius: 50%;
 }
 
+.button__completed:hover {
+  background: linear-gradient(var(--bg-color-list), var(--bg-color-list))
+      padding-box,
+    linear-gradient(120deg, hsl(192, 100%, 67%), hsl(280, 87%, 65%)) border-box;
+  border: 1px solid transparent;
+}
+
 .button-completed.checked {
-  background: var(--check-background);
+  background-color: var(--check-background);
+  background-image: url("./images/icon-check.svg");
 }
 
 .button__input {
   position: absolute;
-  left: 3em;
+  left: 1.5em;
   z-index: 99;
 }
 
@@ -151,12 +201,39 @@ h1 {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 0em 1em;
 }
 
 .wrapper__bottom {
   background: transparent;
   border-radius: 5px;
   font-size: 16px;
+}
+
+.wrapper__bottom__desktop {
+  display: none;
+}
+
+@media (min-width: 1000px) {
+  .wrapper__bottom {
+    display: none
+  }
+
+  .wrapper__bottom__desktop {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    background-color: var(--bg-color-list);
+    font-size: 16px;
+    padding: 1em;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+  }
+
+  .wrapper__bottom__desktop>p {
+    color: var(--color-list);
+  }
 }
 
 .button-left-container {
@@ -179,6 +256,17 @@ h1 {
   padding: 1em;
 }
 
+@media (min-width: 1000px) {
+  .lists-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0;
+    padding: 0;
+    width: 40%;
+  }
+}
+
 .wrapper__drag {
   color: var(--color-list);
   font-size: 16px;
@@ -189,7 +277,7 @@ h1 {
 
 .button__list,
 .button__clear__all,
-.button-left-container>p {
+.button-left-container > p {
   color: var(--color-list);
   background: var(--bg-color-list);
   border: none;
@@ -205,8 +293,9 @@ h1 {
 .attribution {
   font-size: 11px;
   text-align: center;
+  color: var(--color-header);
 }
 
 .attribution a {
-  color: hsl(228, 45%, 44%);
+  color: var(--color-list);
 }
